--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
         "@vercel/postgres": "^0.10.0",
         "bootstrap": "^5.3.3",
         "react-input-mask": "^2.0.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build --repo https://github.com/tatacheba/appstepikjavareact.git"
     }
 }
