--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://tatacheba.github.io/appstepikjavareact",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -19,7 +20,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "deploy": "gh-pages -d build --repo https://github.com/tatacheba/appstepikjavareact.git"
+        "deploy": "gh-pages -d build "
     },
     "eslintConfig": {
         "extends": [
