--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "client",
+    "name": "appstepikjavareact_client",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://tatacheba.github.io/appstepikjavareact_client",
+    "homepage": ".",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
